# URL_Shortner

./: .gitignore  Cargo.toml  test_pattern.html
.Jules/: palette.md
.jules/: bolt.md  sentinel.md
data/: shortener.db  shortener.db-shm  shortener.db-wal
migrations/: 0001_create_links.sql  0002_create_clicks_table.sql  0003_add_premium_features.sql
src/: api.rs  app.rs  db.rs  error.rs  handlers.rs  main.rs  models.rs  services.rs  state.rs  ui.rs  utils.rs
